--- a/.github/workflows/php-unit.yml
+++ b/.github/workflows/php-unit.yml
@@ -1,11 +1,12 @@
-name: PHP Composer
+name: PHP Unit
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - "*"
   pull_request:
-    branches: [ main ]
-
+    branches:
+      - "*"
 jobs:
   build:
 
@@ -29,8 +30,5 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Run test suite
+      run: composer run-script test
